--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,17 @@
+auxiliary.org-netbeans-modules-php-apigen.deprecated=false
+auxiliary.org-netbeans-modules-php-apigen.download=false
+auxiliary.org-netbeans-modules-php-apigen.hasConfig=false
+auxiliary.org-netbeans-modules-php-apigen.internal=false
+auxiliary.org-netbeans-modules-php-apigen.php=true
+auxiliary.org-netbeans-modules-php-apigen.sourceCode=true
+auxiliary.org-netbeans-modules-php-apigen.todo=false
+auxiliary.org-netbeans-modules-php-apigen.tree=true
 copy.src.files=false
 copy.src.target=
 index.file=index.php
 remote.connection=Users-4ab25f
 remote.directory=/htdocs/Tietokantasovellus_k2014_HPH
+remote.permissions=false
 remote.upload=ON_SAVE
 run.as=REMOTE
-url=http://hphonkan.users.cs.helsinki.fi
+url=http://hphonkan.users.cs.helsinki.fi/Tietokantasovellus_k2014_HPH
